@@ -1,3 +1,8 @@
+2000-11-17  Nick Duffek  <nsd@redhat.com>
+
+	* gdb.base/break.exp: Test backtrace and finish from called
+	function on all platforms, not just HP-UX.
+
 2000-11-03  Michael Snyder  <msnyder@cleaver.cygnus.com>
 
 	* config/monitor.exp (gdb_target_cmd): Abstracts some of the
